--- a/proyecto_06/src/main/resources/application.properties
+++ b/proyecto_06/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=proyecto06
+
+server.port=90
+
+#Para mejorar la salida del log de Spring
+logging.pattern.datadormat=hh:mm
+
+#Para eliminar el banner que dice Spring
+spring.main.banner-mode=off
+
+#En desarrollo se elimina el cache, en produccion NO
+spring.thymeleaf.cache=false
+
+#MySql conexion
+spring.datasource.url=jdbc:mysql://localhost:3306/proyecto06?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=usuario_admin
+spring.datasource.password=Admin.
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+#mostrar información en el log
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.type.descriptor.sql.BasicBinder=TRACE
